--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
 	},
 	"devDependencies": {
 		"mocha": "1.0.0",
-		"jshint": "0.6.3"
+		"jshint": "0.6.3",
+		"underscore": "1.3.3"
 	},
 	"keywords": [
-		"cache"
+		"cache",
+		"memory"
 	],
 	"engines": {
 		"node": "0.6.19"
@@ -21,5 +23,8 @@
 	"repository": {
 		"type": "git",
 		"url": "git@github.com:mac-/eidetic.git"
+	},
+	"scripts": {
+		"test": "make test"
 	}
 }
