--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
 	"dependencies": {
 	},
 	"devDependencies": {
-		"mocha": "1.0.0",
+		"mocha": "1.3.0",
 		"jshint": "0.6.3",
 		"underscore": "1.3.3"
 	},
@@ -17,7 +17,7 @@
 		"memory"
 	],
 	"engines": {
-		"node": "0.6.19"
+		"node": ">= 0.6.19"
 	},
 	"main": "./lib/eidetic.js",
 	"repository": {
