--- a/package.json
+++ b/package.json
@@ -6,11 +6,12 @@
 	],
 	"version": "0.1.0",
 	"dependencies": {
-		"underscore": "1.3.3"
+		"underscore": "1.x.x",
+		"clone": "0.1.x"
 	},
 	"devDependencies": {
-		"mocha": "1.3.0",
-		"jshint": "0.6.3"
+		"mocha": "1.x.x",
+		"jshint": "0.6.x"
 		
 	},
 	"keywords": [
