--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
 	"contributors": [
 		"Mac Angell <mac.ang311@gmail.com>"
 	],
-	"version": "0.1.0",
+	"version": "0.1.1",
 	"dependencies": {
 		"underscore": "1.x.x",
 		"clone": "0.1.x"
@@ -28,5 +28,6 @@
 	},
 	"scripts": {
 		"test": "make test"
-	}
+	},
+	"license": "MIT"
 }
