--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
 	],
 	"version": "0.4.0",
 	"dependencies": {
-		"clone": "0.2.x"
+		"clone": "^1.0.2"
 	},
 	"devDependencies": {
 		"mocha": "1.x.x",
